# aoc-rust

./: Cargo.toml  Makefile
src/: graph.rs  lib.rs  main.rs  matrix.rs  point.rs  range.rs  shared.rs  tests.rs
src/aoc2022/: day01.rs  day02.rs  day03.rs  day04.rs
src/aoc2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
src/aoc2023/res/: day04.txt  day07.txt  day08.txt
