[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
dirs = "5.0.1"
itertools = "0.12.0"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
